--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Data Visualisation</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js" defer></script>
+    <script type="module" defer>
+
+        import {scaleLinear} from "https://cdn.skypack.dev/d3-scale@4";
+        
+        const x = scaleLinear();
+        
+        </script>
     <script src="app.js" defer></script>
 </head>
 <body>
-    <div></div>
+    <svg></svg>
 </body>
 </html>
