--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    <svg></svg>
+    <ul></ul>
+    <div id="div"></div>
 </body>
 </html>
