The chart is now interactive

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 <body>
     <div id="app">
         <div id="chart">
-            <svg></svg>
+            <svg>
+                <g>
+                    <g id="labels"></g>
+                </g>
+            </svg>
         </div>
         <div id="data">
             <ul></ul>
