--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         </div>
         <div id="data">
             <ul></ul>
+            <script>
+            </script>
         </div>
     </div>
 </body>
