More concise and added animations
Used the join function to replace append and exit with one function. Used the enter, update and exit to control more animations

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="chart">
             <svg>
                 <g>
-                    <g id="labels"></g>
+                    <g id="axis"></g>
                 </g>
             </svg>
         </div>
