--- a/barChart/index.html
+++ b/barChart/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-
     <title>Data Visualisation</title>
-
     <script src="https://d3js.org/d3.v7.min.js" defer></script>
     <script type="module" defer>
 
@@ -18,19 +16,30 @@
 
     </script>
     <script type="module" defer>
+
         import { axisLeft } from "https://cdn.skypack.dev/d3-axis@3";
+
+        const axis = axisLeft(scale);
+
     </script>
-    <script src="../res/d3-delection-multi.js" defer></script>
-    <script src="../res/jquery.js" defer></script>
-    <script src="../res/jquerycsv.js" defer></script>
     <script src="app.js" defer></script>
 </head>
 
 <body>
-    <button class="button-19" id="previousBtn" role="button" onclick="previous()">
-        << /button>
-            <div id="chart1"></div>
-            <button class="button-19" id="nextBtn" role="button" onclick="next()">></button>
+    <div id="app">
+        <div id="chart">
+            <svg>
+                <g>
+                    <g id="axis"></g>
+                </g>
+            </svg>
+        </div>
+        <div id="data">
+            <ul></ul>
+            <script>
+            </script>
+        </div>
+    </div>
 </body>
 
 </html>
