--- a/lineChart-index.html
+++ b/lineChart-index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./lineChart-style.css">
 
     <title>Data Visualisation</title>
 
@@ -20,10 +20,10 @@
     <script type="module" defer>
         import { axisLeft } from "https://cdn.skypack.dev/d3-axis@3";
     </script>
-    <script src="./d3-delection-multi.js" defer></script>
-    <script src="./jquery.js" defer></script>
-    <script src="./jquerycsv.js" defer></script>
-    <script src="app.js" defer></script>
+    <script src="../res/d3-delection-multi.js" defer></script>
+    <script src="../res/jquery.js" defer></script>
+    <script src="../res/jquerycsv.js" defer></script>
+    <script src="./lineChart-app.js" defer></script>
 </head>
 
 <body>
